Add phase two with working buttons

--- a/NGcss.css
+++ b/NGcss.css
@@ -2,6 +2,7 @@
 *:after,
 *:before {
   box-sizing: border-box;
+  margin:0 ;
 }
 
 body {
@@ -12,7 +13,8 @@ body {
 }
 
 header {
-  background-color: #404041;
+  background-color: #404041; 
+  height: 200px;
 }
 
 #numbertitle {
@@ -26,7 +28,7 @@ header {
 }
 
 .button {
-  border-radius: 20%;
+  border-radius: 20px;
   font-size: 1em
 }
 
